<resources>
    <string name="app_name">drawer_profile</string>
    <string name="open_nav">Open nav</string>
    <string name="close_nav">Close nav</string>
    <string name="nav_activity_1">Activity 1</string>
    <string name="nav_username">    username</string>
    <string name="nav_username_gmail_com">     username@gmail.com</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_history">History</string>
    <string name="nav_share">Share</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_information">Information</string>
    <string name="nav_title" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="logout_fragment">Logout Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="settings_Fragment">Settings Fragment</string>
    <string name="information_fragment">Information Fragment</string>
</resources>