<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/baseline_home_24"
            />

        <item
            android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/baseline_history_24"
            />

        <item
            android:id="@+id/nav_info"
            android:title="@string/nav_information"
            android:icon="@drawable/baseline_info_24"
            />


        <item
            android:id="@+id/nav_share"
            android:title="@string/nav_share"
            android:icon="@drawable/baseline_share_24"
            />
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings"
                android:icon="@drawable/baseline_settings_24"
                />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout"
                android:icon="@drawable/baseline_logout_24"/>
        </menu>


    </item>







</menu>